{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 382,
  "lineage": "132e1f48-ec4c-577f-4cfb-b44f8dc32acc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb-mediawiki",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680832342871:loadbalancer/elb-mediawiki",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-mediawiki-2084884643.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb-mediawiki",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb-mediawiki",
            "security_groups": [
              "sg-004c105c1e6367c50"
            ],
            "source_security_group": "680832342871/elb-http",
            "source_security_group_id": "sg-004c105c1e6367c50",
            "subnets": [
              "subnet-06cefb9334c8db28d",
              "subnet-0c1ddc4d672f893d6"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_subnet.public-subnet-1a",
            "aws_subnet.public-subnet-1b",
            "aws_vpc.vpc-demo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680832342871:internet-gateway/igw-0ab369177e4af2057",
            "id": "igw-0ab369177e4af2057",
            "owner_id": "680832342871",
            "tags": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-04870ba8080e3f863"
          },
          "dependencies": [
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01633c5a9bdb8c500",
            "owner_id": "680832342871",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab369177e4af2057",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public subnets Route Table"
            },
            "vpc_id": "vpc-04870ba8080e3f863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-igw",
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073c76eecd8268abc",
            "route_table_id": "rtb-01633c5a9bdb8c500",
            "subnet_id": "subnet-06cefb9334c8db28d"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-igw",
            "aws_route_table.route-table-1",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0717aa6487e3e0941",
            "route_table_id": "rtb-01633c5a9bdb8c500",
            "subnet_id": "subnet-0c1ddc4d672f893d6"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-igw",
            "aws_route_table.route-table-1",
            "aws_subnet.public-subnet-1b",
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680832342871:security-group/sg-004c105c1e6367c50",
            "description": "Allow HTTP traffic to instances through Elastic Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004c105c1e6367c50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-http",
            "name_prefix": "",
            "owner_id": "680832342871",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ELB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04870ba8080e3f863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-demo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680832342871:security-group/sg-043df10c4eee085ba",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043df10c4eee085ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "680832342871",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04870ba8080e3f863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-demo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680832342871:subnet/subnet-06cefb9334c8db28d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06cefb9334c8db28d",
            "map_public_ip_on_launch": false,
            "owner_id": "680832342871",
            "tags": {
              "Name": "Public Subnet 1a"
            },
            "vpc_id": "vpc-04870ba8080e3f863"
          },
          "dependencies": [
            "aws_vpc.vpc-demo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680832342871:subnet/subnet-0c1ddc4d672f893d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c1ddc4d672f893d6",
            "map_public_ip_on_launch": false,
            "owner_id": "680832342871",
            "tags": {
              "Name": "Public Subnet 1b"
            },
            "vpc_id": "vpc-04870ba8080e3f863"
          },
          "dependencies": [
            "aws_vpc.vpc-demo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680832342871:vpc/vpc-04870ba8080e3f863",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03948a5b155909539",
            "default_route_table_id": "rtb-0fe2ec42b179818ea",
            "default_security_group_id": "sg-05c88416bc35a611f",
            "dhcp_options_id": "dopt-b8d3abc2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04870ba8080e3f863",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fe2ec42b179818ea",
            "owner_id": "680832342871",
            "tags": {
              "Name": "vpc-demo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}